part5/e_5.01/dummy-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummysite-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummysite-controller
  template:
    metadata:
      labels:
        app: dummysite-controller
    spec:
      serviceAccountName: dummysite-controller-account
      containers:
        - name: dummysite-controller
          image: desipeli/dwk-dummy:1.3
