part5/e_5.01/dummy-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummysite-controller-svc
spec:
  type: NodePort
  selector:
    app: dummysite-controller
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
